[workspace]
members = [
    "core",
    "container",
    "os",
    "net",
    "database",
    "encoding",
    "crypto",
    "util",
    "errors",
    "text",
    "i18n",
    "debug",
    "test",
    "frame",
    "contrib/config",
    "contrib/registry",
    "contrib/sdk/httpclient",
    "contrib/drivers",
    "contrib/grpc",
    "contrib/trace",
    "cmd/rf",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rf contributors"]
license = "MIT"
repository = "https://github.com/gogf/rf"

[workspace.dependencies]
# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 异步运行时
tokio = { version = "1.49", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.19", features = ["v4", "serde"] }

# 配置
config = "0.15"

# 容器
dashmap = "6.1"
crossbeam = "0.8"
indexmap = "2.1"
smallvec = "1.11"
ringbuf = "0.4"
parking_lot = "0.12"
arc-swap = "1.6"

# 网络
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
hyper = "1.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
axum-extra = "0.10"
tokio-tungstenite = "0.24"
tonic = "0.12"
ipnet = "2.10"
trust-dns-resolver = "0.23"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite"] }
deadpool = "0.11"
redis = { version = "1.0", features = ["tokio-comp"] }

# 编码
toml = "0.8"
quick-xml = { version = "0.31", features = ["serialize"] }
ini = "1.3"
base64 = "0.22"
url = "2.5"
encoding_rs = "0.8"
flate2 = "1.0"
zip = "0.6"

# 加密
ring = "0.17"
aes-gcm = "0.10"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
rsa = "0.9"
hmac = "0.12"
crc32fast = "1.3"

# 工具
# Note: rand 0.9 is available but rsa crate requires rand 0.8
# Keeping rand 0.8 for compatibility with rsa crate
rand = "0.8"
regex = "1.11"
validator = "0.18"
unicode-segmentation = "1.11"

# 文件系统
fs2 = "0.4"
notify = "8.2"
built = "0.7"
sysinfo = "0.37"
ctrlc = "3.4"
tempfile = "3.9"
walkdir = "2.4"

# 其他
once_cell = "1.19"
lazy_static = "1.4"
backtrace = "0.3"
moka = { version = "0.12", features = ["future"] }
tokio-cron-scheduler = "0.9"
axum-sessions = "0.4"
pathdiff = "0.2"
reflect = "0.1"
askama = "0.15"
tera = "1.20"
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry_sdk = "0.31"
metrics = "0.23"
utoipa = "5.4"
fluent = "0.16"
id_tree = "1.8"
petgraph = "0.6"
deadpool-generic = "0.11"
byteorder = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
twox-hash = "1.6"
scraper = "0.19"
html5ever = "0.26"
des = "0.9"
tokio-test = "0.4"
env_logger = "0.11"

