[package]
name = "rf-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RF core module - core types and traits"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true

