[package]
name = "rf-debug"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RF debug module - debugging utilities"

[dependencies]
backtrace = { workspace = true }
env_logger.workspace = true
rf-core = { path = "../core" }

