[package]
name = "rf-encoding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RF encoding module - encoding/decoding"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
quick-xml = { workspace = true }
ini = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
encoding_rs = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
byteorder = { workspace = true }
xxhash-rust = { workspace = true }
twox-hash = { workspace = true }
scraper = { workspace = true }
html5ever = { workspace = true }
rf-core = { path = "../core" }
rf-errors = { path = "../errors" }

