[package]
name = "rf-os"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RF OS module - file system, process, config, log, etc."

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = { workspace = true }

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "mutex_bench"
harness = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
config = { workspace = true }
clap = "4.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
fs2 = { workspace = true }
notify = { workspace = true }
built = { workspace = true }
sysinfo = { workspace = true }
ctrlc = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
moka = { workspace = true }
tokio-cron-scheduler = { workspace = true }
axum-sessions = { workspace = true }
async-session = "3.0"
pathdiff = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
askama = { workspace = true }
tera = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
futures = "0.3"
rf-core = { path = "../core" }
rf-errors = { path = "../errors" }
rf-container = { path = "../container" }
rf-database = { path = "../database" }
base64 = { workspace = true }
url = { workspace = true }

