[package]
name = "rf-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RF test module - testing utilities"

[dependencies]
tokio-test = { workspace = true }
rf-core = { path = "../core" }
rf-errors = { path = "../errors" }

