[package]
name = "rf-cmd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RF CLI tool - command line interface for RF framework"

[[bin]]
name = "rf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { workspace = true, features = ["postgres", "mysql", "sqlite", "chrono"] }
rf-core = { path = "../../core" }
rf-errors = { path = "../../errors" }
rf-database = { path = "../../database" }
rf-os = { path = "../../os" }

